--- a/css/grandeRegionWel.css
+++ b/css/grandeRegionWel.css
@@ -75,3 +75,8 @@ background-color: #f5f7ee;
 p{
     text-align: justify;
 }
+
+.gsc-control-cse{
+   background-color:#335557;
+      border: none;
+}
